src/App.css
@import "node_modules/ol/ol.css";

@property --weather-transition {
	syntax: "<percentage>";
	inherits: true;
	initial-value: 0%;
}

@property --weather-transition-2 {
	syntax: "<percentage>";
	inherits: true;
	initial-value: 100%;
}

@property --weather-transition-3 {
	syntax: "<percentage>";
	inherits: true;
	initial-value: 200%;
}

#root {
	margin: 0 auto;
	--route-color: hsl(210, 100%, 75%);
	--disabled-color: hsl(0, 0%, 55%);
	--urgent-color: hsl(0, 100%, 65%);
	--warning-color: hsl(15, 100%, 65%);
	--info-color: hsl(30, 100%, 65%);
	--high-color: hsl(30, 80%, 70%);;
	--low-color: hsl(220, 80%, 70%);;
}

.hide-mouse-cursor
{
	cursor: none;
}

.toolbar {
	text-align: center;
}

.toolbar-hidden {
	display: none;
}

header {
	display: flex;
	align-items: center;
	justify-content: space-between;
	padding: 0.2em 0.5em;
	margin: 0;
	font-size: 1em;
}

main
{
	display: grid;
	grid-template-columns: 1fr;
	gap: 0.1em 0.1em;
}

main:has(> :nth-child(2):last-child) {
	grid-template-columns: 3fr 2fr;
	font-size: 0.8em;
}

main:empty {
	display: none;
}

article {
	display: flex;
	align-items: center;
	justify-content: space-evenly;
	background-color: #181818;
	border: 2px solid black;
	padding: 0.5em;
	margin: 0.1em;
	font-size: 1em;
}

article:first-child {
	border-top-right-radius: 2em;
	border-top-left-radius: 2em;
}

article:last-child {
	border-bottom-right-radius: 2em;
	border-bottom-left-radius: 2em;
}

article>div,
header>div {
	font-size: 2em;
	margin: 0.1em;
	flex: 1;
	margin: 0.1em 0.2em;
}

article>div:last-child,
header>div:last-child {
	font-size: 2em;
	margin: 0.1em;
	flex: none;
	text-align: right;
	color: white;
}

article>div:first-child,
header>div:first-child {
	font-size: 2em;
	margin: 0.1em;
	flex: none;
}

section.radar
{
	flex: 1;
	display: flex;
	align-items: stretch;
}

section.radar>article
{
	padding: 0;
	overflow: clip;
	width: 100%;
}

section.radar>article>div
{
	height: 100%;
	margin: 0;
}

h1>* {
	vertical-align: top;
}

.route {
	display: inline-block;
	background: var(--route-color);
	color: black;
	border: 4px solid transparent;
	padding: 0.1em 0.2em;
	border-radius: 0.5em;
	margin: 0.1em;
	vertical-align: middle;
	width: 1.2em;
	font-size: 1em;
	line-height: 1em;
	text-align: center;
	font-style: normal;
	font-weight: 800;
}

.route3 span {
	font-size: 0.75em;
	line-height: 1.6em;
}

.dir {
	display: inline-block;
	color: var(--route-color);
	border: 4px solid --route-color;
	padding: 0.1em 0.35em;
	border-radius: 2em;
	margin: 0.1em;
	font-size: 0.7em;
	vertical-align: middle;
}

.headsign {
	color: var(--route-color);
}

.subtitle {
	font-size: 0.5em;
}

/* Only display the first two instances in the list */
.minutes-display:not(:first-child, :nth-child(2)) {
	display: none;
}

/* Show a comma after the first instance but not if it's the only instance */
.minutes-display:first-child:not(:last-child):after {
	content: ", ";
}

.minutes-until {
	font-weight: 800;
	font-size: 1.1em;
	font-variant-numeric: tabular-nums;
}

.has-not-left-terminus:after {
	content: "*";
	vertical-align: text-top;
	font-size: 0.8em;
	font-weight: 600;
	letter-spacing: -0.1em;
	font-variant-ligatures: no-contextual;
}

.imminent {
	color: var(--urgent-color);
}

.very-soon {
	color: var(--warning-color);
}

.soon {
	color: var(--info-color);
}

.weather-emoji {
	margin: 0 -0.1em;
}

.weather-description {
	display: grid;
	--weather-transition: 0%;
	--weather-transition-2: 100%;
	overflow: hidden;
  	white-space: nowrap;
  	text-overflow: ellipsis;
}

.weather-description:has(> :nth-child(2):last-child) {
	animation: 30s linear infinite scroll-in-2;
}

.weather-description:has(> :nth-child(3):last-child) {
	animation: 45s linear infinite scroll-in-3;
}

.weather-description>div {
	grid-row: 1;
	grid-column: 1;
	overflow: hidden;
  	white-space: nowrap;
  	text-overflow: ellipsis;
}

.weather-description>div:first-child {
	transform: translateY(var(--weather-transition));
}

.weather-description>div:nth-child(2) {
	transform: translateY(var(--weather-transition-2));
}

.weather-description>div:nth-child(3) {
	transform: translateY(var(--weather-transition-3));
}

@keyframes scroll-in-2 {
	0%,
	45% {
		--weather-transition: 0%;
		--weather-transition-2: 100%;
	}

	/* scroll second div in 45-50 */
	50% {
		--weather-transition: -100%;
		--weather-transition-2: 0%;
		animation-timing-function: step-start;
	}

	/* swap divs */
	51%,
	95% {
		--weather-transition: 100%;
		--weather-transition-2: 0%;
		animation-timing-function: initial;
	}

	/* scroll first div in 95-100 */
	100% {
		--weather-transition: 0%;
		--weather-transition-2: -100%;
	}
}

@keyframes scroll-in-3 {
	0%,
	30% {
		--weather-transition: 0%;
		--weather-transition-2: 100%;
		--weather-transition-3: 200%;
	}

	/* scroll second div in 30-33 */
	33%,
	64% {
		--weather-transition: -100%;
		--weather-transition-2: 0%;
		--weather-transition-3: 100%;
	}

	
	/* scroll second div in 64-67 */
	67% {
		--weather-transition: -200%;
		--weather-transition-2: -100%;
		--weather-transition-3: 0%;
		animation-timing-function: step-start;
	}

	/* swap divs */
	68%,
	97% {
		--weather-transition: 100%;
		--weather-transition-2: 200%;
		--weather-transition-3: 0%;
		animation-timing-function: initial;
	}

	/* scroll first div in 97-100 */
	100% {
		--weather-transition: 0%;
		--weather-transition-2: 100%;
		--weather-transition-3: -100%;
	}
}

.temperature-high {
	color: var(--high-color);
}

.temperature-low {
	color: var(--low-color);
}

div:has(> .ol-attribution) {
	display: flex;
	align-items: end;
	justify-content: center;
}

.ol-attribution {
	position: initial;
	border-radius: 4px 0;
}

.ol-attribution.ol-uncollapsible {
	border-radius: 4px 4px 0 0;
	background-color: black;
}

.ol-attribution ul {
	text-shadow: none;
}

